upd language and format tables

--- a/41-presence-of-seasonality.qmd
+++ b/41-presence-of-seasonality.qmd
@@ -28,7 +28,7 @@ In general, adjusting a non-seasonal series is less of a problem than not adjust
 So, unless you have good reasons to believe that a series is not-seasonal, adjust it.
 *When in doubt, adjust!*
 
-Of course the final answer is never that simple. 
+Of course the final answer is never so simple. 
 For example, the International Monetary Fund (IMF) in their [Quarterly National Accounts Manual](https://www.imf.org/external/pubs/ft/qna/pdf/2017/chapter7.pdf) about seasonal adjustment says, "A series should be seasonally adjusted only when there is evidence of identifiable seasonality. Series with no seasonality or too unstable seasonality should not be seasonally adjusted." 
 The IMF is attempting to maintain accounting relationship which are of utmost important to their seasonal adjustment policies. 
 
@@ -47,6 +47,8 @@ To help you to make a good decision, X-13 offers a few formal checks:
 - F-test for seasonal regressors
 
 Which tests are preferable, and how should a user decide if the tests are not aligned?
+Often, this will only happen with marginal cases and hence we suggest following our guiding principle and adjusting your series. 
+More often than not the tests will provide enough evidence to make help make an informed decision about whether a series is seasonal or not. 
 
 ### QS Test
 
@@ -66,6 +68,9 @@ It shows that the QS value of the original series is 168, which comes with a p-v
 Since the null hypothesis is no seasonality, this p-value can be read as high evidence the series is seasonal. 
 
 In other words, `AirPassengers` is a clearly seasonal series, which should not come as a surprise at this point.
+
+If you encounter a series with a moderate p-value for the first line, you can also consider the 8th line (the second occurrence of `qsori`) which again calculates the QS statistic for the original series but restricting the view to the most recent 8 years of data.
+Since often the more recent data is more crucial to seasonal adjust correctly this additional test can help make the decision. 
 
 ### Identifiable Seasonality Test
 
@@ -190,10 +195,10 @@ m = seas(
   regression.variables = "seasonal"
 )
 
-
 Ftest = udg(m, "ftest$Seasonal") |> round(5)
+colnames(Ftest) = c("Seasonal F-test")
 rownames(Ftest) = c("df1", "df2", "test_stat", "p_value")
-Ftest
+knitr::kable(Ftest)
 ```
 
 We see again that AirPassengers is seasonal. 
@@ -206,10 +211,10 @@ m = seas(
   regression.variables = "seasonal"
 )
 
-
 Ftest = udg(m, "ftest$Seasonal") |> round(5)
+colnames(Ftest) = c("Seasonal F-test")
 rownames(Ftest) = c("df1", "df2", "test_stat", "p_value")
-Ftest
+knitr::kable(Ftest)
 ```
 
 The F-test again shows the case study series is not seasonal.
